--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "gulp",
     "test": "mocha",
-    "prepublish": "npm run build"
+    "prepublish": "gulp build"
   },
   "devDependencies": {
     "babel-register": "^6.4.3",
